tekton/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webhook-quarkus-app-el
  namespace: my-app
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: quarkus-app-el
spec:
  to:
    kind: Service
    name: el-quarkus-app-el
    weight: 100
  port:
    targetPort: http-listener
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
